# pan-globalprotect-okta

./: .gitignore  .pre-commit-config.yaml  README.md  gp-okta.conf  gp-okta.py  pyproject.toml  requirements.txt  vpnc-script-wrapper.sh
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
