[tool.poetry]
name = "pan-globalprotect-okta"
version = "0.1.0"
description = ""
authors = ["Taylor Dean <taylor@makeshift.dev>"]

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.6.3"
requests = "^2.25.1"
python-gnupg = "^0.4.7"
pre-commit = "^2.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
