[tool.poetry]
name = "pan-globalprotect-okta"
version = "0.1.0"
description = ""
authors = ["Taylor Dean <taylor@makeshift.dev>"]

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^5.2.2"
requests = "^2.31.0"
python-gnupg = "^0.5.2"
pre-commit = "^2.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
